# python-download-files-by-map

./: .gitignore  Makefile  README.md  pyproject.toml  release.env  sample-map.json  sonar-project.properties
.github/workflows/: build.yaml
src/download_files_by_map/: cli.py  download_files_by_map.py  util.py
tests/: test_cli.py  test_cli_negative.py  test_util.py
tests/test-data/: map1.json  map2.json
