[project]
name = "download_files_by_map"
version = "0.2.0"
description = "download files using a json tree map"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "downloader" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[project.urls]
homepage = "https://github.com/siakhooi/python-download-files-by-map"
repository = "https://github.com/siakhooi/python-download-files-by-map"
documentation = "https://github.com/siakhooi/python-download-files-by-map/wiki"
"Bug Tracker" = "https://github.com/siakhooi/python-download-files-by-map/issues"

[project.scripts]
download-files-by-map = 'download_files_by_map.cli:run'


[tool.poetry]
packages = [{include = "download_files_by_map", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
flake8 = "^7.2.0"
pytest-responses = "^0.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
